Chức năng phát quà thiếu nhi
Code service và controller

--- a/src/views/phatqua/thieunhi/ThieuNhi.fxml
+++ b/src/views/phatqua/thieunhi/ThieuNhi.fxml
@@ -50,14 +50,14 @@
                   </Button>
                     </children>
                 </HBox>
-            <TableView prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
+            <TableView fx:id="thieuNhiTable" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
               <columns>
-                <TableColumn prefWidth="178.40002727508545" text="Tên" />
-                <TableColumn minWidth="0.0" prefWidth="87.19999694824219" text="Giới tính" />
-                  <TableColumn prefWidth="137.5999755859375" text="Ngày sinh" />
-                  <TableColumn prefWidth="68.79998779296875" text="Tuổi" />
-                  <TableColumn prefWidth="121.5999755859375" text="Tên chủ hộ" />
-                  <TableColumn prefWidth="195.2000732421875" text="Địa chỉ" />
+                <TableColumn fx:id="col_Ten" prefWidth="178.40002727508545" text="Tên" />
+                <TableColumn fx:id="col_GioiTinh" minWidth="0.0" prefWidth="87.19999694824219" text="Giới tính" />
+                  <TableColumn fx:id="col_NgaySinh" prefWidth="137.5999755859375" text="Ngày sinh" />
+                  <TableColumn fx:id="col_Tuoi" prefWidth="68.79998779296875" text="Tuổi" />
+                  <TableColumn fx:id="col_ChuHo" prefWidth="121.5999755859375" text="Tên chủ hộ" />
+                  <TableColumn fx:id="col_DiaChi" prefWidth="195.2000732421875" text="Địa chỉ" />
               </columns>
             </TableView>
             <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="20.0" GridPane.rowIndex="1">
