Tinh nang Sua Ho Gia Dinh

--- a/src/views/hogiadinh/HoGiaDinh.fxml
+++ b/src/views/hogiadinh/HoGiaDinh.fxml
@@ -42,7 +42,7 @@
                         <Font size="14.0" />
                      </font>
                   </Button>
-                  <Button contentDisplay="CENTER" mnemonicParsing="false" onAction="#update" prefHeight="47.0" prefWidth="95.0" styleClass="small_button" stylesheets="@../../static/css/main.css" text="Update" textFill="WHITE">
+                  <Button contentDisplay="CENTER" mnemonicParsing="false" onAction="#edit" prefHeight="47.0" prefWidth="95.0" styleClass="small_button" stylesheets="@../../static/css/main.css" text="Sửa" textFill="WHITE">
                      <font>
                         <Font size="14.0" />
                      </font>
