--- a/src/views/hogiadinh/SuaHGD.fxml
+++ b/src/views/hogiadinh/SuaHGD.fxml
@@ -6,12 +6,13 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="430.0" prefWidth="545.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.hogiadinh.ThemHGDController">
+<AnchorPane prefHeight="430.0" prefWidth="545.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.hogiadinh.SuaHGDController">
    <children>
       <TextField fx:id="textIDGiaDinh" layoutX="145.0" layoutY="39.0" prefHeight="47.0" prefWidth="369.0" styleClass="search" stylesheets="@../../static/css/main.css" />
       <TextField fx:id="textDiaChi" layoutX="145.0" layoutY="111.0" prefHeight="47.0" prefWidth="369.0" styleClass="search" stylesheets="@../../static/css/main.css" />
       <TextField fx:id="textChuHo" layoutX="145.0" layoutY="191.0" prefHeight="47.0" prefWidth="369.0" styleClass="search" stylesheets="@../../static/css/main.css" />
       <TextField fx:id="textSDT" layoutX="145.0" layoutY="272.0" prefHeight="47.0" prefWidth="369.0" styleClass="search" stylesheets="@../../static/css/main.css" />
+      <Button layoutX="414.0" layoutY="349.0" mnemonicParsing="false" onAction="#update" prefHeight="47.0" prefWidth="99.0" styleClass="small_button" stylesheets="@../../static/css/main.css" text="Sửa" />
       <Label alignment="CENTER" layoutX="9.0" layoutY="44.0" prefHeight="37.0" prefWidth="122.0" stylesheets="@../../static/css/main.css" text="ID Gia Đình">
          <font>
             <Font size="14.0" />
@@ -32,7 +33,10 @@
             <Font size="14.0" />
          </font>
       </Label>
-      <Button layoutX="280.0" layoutY="349.0" mnemonicParsing="false" onAction="#addHoGiaDinh" prefHeight="47.0" prefWidth="99.0" styleClass="small_button" stylesheets="@../../static/css/main.css" text="Thêm" />
-      <Button layoutX="414.0" layoutY="349.0" mnemonicParsing="false" onAction="#deleteText" prefHeight="47.0" prefWidth="99.0" styleClass="small_button" stylesheets="@../../static/css/main.css" text="Xóa text" />
+      <Label alignment="CENTER" layoutX="391.0" layoutY="44.0" prefHeight="37.0" prefWidth="122.0" text="(không được sửa)" textFill="#e00909">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
