Chức năng phát quà thiếu nhi

--- a/src/views/phatqua/thieunhi/ThieuNhi.fxml
+++ b/src/views/phatqua/thieunhi/ThieuNhi.fxml
@@ -26,8 +26,8 @@
             <children>
                 <HBox alignment="CENTER_LEFT" prefHeight="102.0" prefWidth="782.0" spacing="20.0">
                     <children>
-                  <ComboBox fx:id="chonNam" prefHeight="42.0" prefWidth="94.0" promptText="Năm" styleClass="search" stylesheets="@../../../static/css/main.css" />
-                        <ComboBox fx:id="chonDip" prefHeight="42.0" prefWidth="198.0" promptText="Dịp đặc biệt" styleClass="search" stylesheets="@../../../static/css/main.css" />
+                  <ComboBox fx:id="chonNam" onAction="#chonNam" prefHeight="42.0" prefWidth="94.0" promptText="Năm" styleClass="search" stylesheets="@../../../static/css/main.css" />
+                        <ComboBox fx:id="chonDip" onAction="#chonDip" prefHeight="42.0" prefWidth="198.0" promptText="Dịp đặc biệt" styleClass="search" stylesheets="@../../../static/css/main.css" />
                         <Button mnemonicParsing="false" onAction="#phatQua" prefHeight="42.0" prefWidth="106.0" styleClass="small_button" stylesheets="@../../../static/css/main.css" text="Phát quà" textFill="WHITE">
                             <font>
                                 <Font size="18.0" />
