--- a/src/views/phatqua/thieunhi/ThongTinQuaTN.fxml
+++ b/src/views/phatqua/thieunhi/ThongTinQuaTN.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -13,7 +12,7 @@
 
 <AnchorPane prefHeight="355.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.thieunhi.ThemQuaThieuNhiController">
    <children>
-      <Button layoutX="454.0" layoutY="300.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="116.0" styleClass="small_button" stylesheets="@../../../static/css/main.css" text="Thêm mới" textFill="WHITE">
+      <Button layoutX="454.0" layoutY="300.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="116.0" styleClass="small_button" stylesheets="@../../../static/css/main.css" text="Cập nhật" textFill="WHITE">
          <font>
             <Font size="18.0" />
          </font>
@@ -44,21 +43,21 @@
                   <Font name="System Bold" size="15.0" />
                </font>
             </Label>
-            <TextField fx:id="textEnterMoTa" prefHeight="50.0" prefWidth="244.0" promptText="Mô tả" style="-fx-border-color: black;" styleClass="search" stylesheets="@../../../static/css/main.css" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="textMoTa" prefHeight="50.0" prefWidth="244.0" promptText="Mô tả" style="-fx-border-color: black;" styleClass="search" stylesheets="@../../../static/css/main.css" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <Label prefHeight="50.0" prefWidth="114.0" text="Đơn giá:" wrapText="true" GridPane.rowIndex="2">
                <font>
                   <Font name="System Bold" size="15.0" />
                </font>
             </Label>
-            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="30.0" GridPane.columnIndex="1">
+            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="20.0" GridPane.columnIndex="1">
                <children>
-                  <TextField fx:id="textEnterTenDip" prefHeight="50.0" prefWidth="302.0" promptText="Dịp" style="-fx-border-color: black;" styleClass="search" stylesheets="@../../../static/css/main.css" />
-                  <ComboBox fx:id="enterNam" prefHeight="50.0" prefWidth="100.0" promptText="Năm" styleClass="search" stylesheets="@../../../static/css/main.css" />
+                  <TextField fx:id="textDip" prefHeight="50.0" prefWidth="329.0" promptText="Dịp" style="-fx-border-color: black;" styleClass="search" stylesheets="@../../../static/css/main.css" />
+                  <TextField fx:id="textNam" prefHeight="50.0" prefWidth="100.0" promptText="Năm" style="-fx-border-color: black;" styleClass="search" stylesheets="@../../../static/css/main.css" />
                </children>
             </HBox>
             <HBox alignment="CENTER_LEFT" prefHeight="83.0" prefWidth="454.0" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <children>
-                  <TextField fx:id="textEnterTenDip1" prefHeight="50.0" prefWidth="146.0" promptText="Đơn giá" style="-fx-border-color: black;" styleClass="search" stylesheets="@../../../static/css/main.css" />
+                  <TextField fx:id="textDonGia" prefHeight="50.0" prefWidth="146.0" promptText="Đơn giá" style="-fx-border-color: black;" styleClass="search" stylesheets="@../../../static/css/main.css" />
                   <Label prefHeight="50.0" prefWidth="114.0" text="/ 1 thiếu nhi" wrapText="true">
                      <font>
                         <Font name="System Bold" size="15.0" />
