--- a/src/views/phatqua/thieunhi/ThongTinQuaTN.fxml
+++ b/src/views/phatqua/thieunhi/ThongTinQuaTN.fxml
@@ -10,14 +10,14 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="355.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.thieunhi.ThemQuaThieuNhiController">
+<AnchorPane prefHeight="355.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.thieunhi.ThongTinQuaThieuNhiController">
    <children>
-      <Button layoutX="454.0" layoutY="300.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="116.0" styleClass="small_button" stylesheets="@../../../static/css/main.css" text="Cập nhật" textFill="WHITE">
+      <Button layoutX="454.0" layoutY="300.0" mnemonicParsing="false" onAction="#update" prefHeight="34.0" prefWidth="116.0" styleClass="small_button" stylesheets="@../../../static/css/main.css" text="Cập nhật" textFill="WHITE">
          <font>
             <Font size="18.0" />
          </font>
       </Button>
-      <Button layoutX="361.0" layoutY="300.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="78.0" styleClass="small_button" stylesheets="@../../../static/css/main.css" text="Hủy" textFill="WHITE">
+      <Button layoutX="361.0" layoutY="300.0" mnemonicParsing="false" onAction="#close" prefHeight="34.0" prefWidth="78.0" styleClass="small_button" stylesheets="@../../../static/css/main.css" text="Hủy" textFill="WHITE">
          <font>
             <Font size="18.0" />
          </font>
