--- a/src/views/phatqua/thieunhi/ThemGoiQuaTN.fxml
+++ b/src/views/phatqua/thieunhi/ThemGoiQuaTN.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -43,7 +44,7 @@
                   <Font name="System Bold" size="15.0" />
                </font>
             </Label>
-            <TextField fx:id="textEnterMoTa" prefHeight="50.0" prefWidth="244.0" promptText="Mô tả" style="-fx-border-color: black;" styleClass="search" stylesheets="@../../../static/css/main.css" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="textEnterMoTa" prefHeight="50.0" prefWidth="447.0" promptText="Mô tả" style="-fx-border-color: black;" styleClass="search" stylesheets="@../../../static/css/main.css" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <Label prefHeight="50.0" prefWidth="114.0" text="Đơn giá:" wrapText="true" GridPane.rowIndex="2">
                <font>
                   <Font name="System Bold" size="15.0" />
@@ -51,14 +52,14 @@
             </Label>
             <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="30.0" GridPane.columnIndex="1">
                <children>
-                  <TextField fx:id="textEnterDip" prefHeight="50.0" prefWidth="358.0" promptText="Dịp" style="-fx-border-color: black;" styleClass="search" stylesheets="@../../../static/css/main.css" />
-                  <TextField fx:id="textEnterNam" prefHeight="50.0" prefWidth="136.0" promptText="Năm" style="-fx-border-color: black;" styleClass="search" stylesheets="@../../../static/css/main.css" />
+                  <ComboBox fx:id="themDipThieuNhi" onAction="#themDipThieuNhi" prefHeight="50.0" prefWidth="278.0" promptText="Tên dịp" styleClass="search" stylesheets="@../../../static/css/main.css" />
+                  <ComboBox fx:id="themNamThieuNhi" onAction="#themNamThieuNhi" prefHeight="50.0" prefWidth="131.0" promptText="Năm" styleClass="search" stylesheets="@../../../static/css/main.css" />
                </children>
             </HBox>
             <HBox alignment="CENTER_LEFT" prefHeight="83.0" prefWidth="454.0" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <children>
                   <TextField fx:id="textEnterDonGia" prefHeight="50.0" prefWidth="146.0" promptText="Đơn giá" style="-fx-border-color: black;" styleClass="search" stylesheets="@../../../static/css/main.css" />
-                  <Label prefHeight="50.0" prefWidth="114.0" text="/ 1 thiếu nhi" wrapText="true">
+                  <Label prefHeight="50.0" prefWidth="153.0" text="vnđ / 1 thiếu nhi" wrapText="true">
                      <font>
                         <Font name="System Bold" size="15.0" />
                      </font>
