--- a/src/views/phatqua/hocsinh/ThongTinQuaHS.fxml
+++ b/src/views/phatqua/hocsinh/ThongTinQuaHS.fxml
@@ -1,36 +1,71 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.hocsinh.ThongTinQuaHocSinhController">
+<AnchorPane prefHeight="355.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.thieunhi.ThongTinQuaThieuNhiController">
    <children>
-      <ComboBox fx:id="enterNam" layoutX="466.0" layoutY="38.0" prefHeight="50.0" prefWidth="100.0" promptText="Năm" styleClass="search" stylesheets="@../../../static/css/main.css" />
-      <TextField fx:id="textEnterMoTa" alignment="TOP_LEFT" layoutX="137.0" layoutY="110.0" prefHeight="223.0" prefWidth="430.0" promptText="Mô tả" style="-fx-border-color: black;" styleClass="search" stylesheets="@../../../static/css/main.css" />
-      <Label layoutX="14.0" layoutY="38.0" prefHeight="50.0" prefWidth="86.0" text="Kết quả:">
-         <font>
-            <Font name="System Bold" size="15.0" />
-         </font>
-      </Label>
-      <Label alignment="TOP_LEFT" layoutX="14.0" layoutY="110.0" prefHeight="50.0" prefWidth="114.0" text="Mô tả gói quà:" wrapText="true">
-         <font>
-            <Font name="System Bold" size="15.0" />
-         </font>
-      </Label>
-      <Button layoutX="489.0" layoutY="351.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="78.0" styleClass="small_button" stylesheets="@../../../static/css/main.css" text="Sửa" textFill="WHITE">
+      <Button layoutX="454.0" layoutY="300.0" mnemonicParsing="false" onAction="#update" prefHeight="34.0" prefWidth="116.0" styleClass="small_button" stylesheets="@../../../static/css/main.css" text="Cập nhật" textFill="WHITE">
          <font>
             <Font size="18.0" />
          </font>
       </Button>
-      <Button layoutX="395.0" layoutY="351.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="78.0" styleClass="small_button" stylesheets="@../../../static/css/main.css" text="Hủy" textFill="WHITE">
+      <Button layoutX="361.0" layoutY="300.0" mnemonicParsing="false" onAction="#close" prefHeight="34.0" prefWidth="78.0" styleClass="small_button" stylesheets="@../../../static/css/main.css" text="Hủy" textFill="WHITE">
          <font>
             <Font size="18.0" />
          </font>
       </Button>
-      <ComboBox fx:id="dipHocSinh" layoutX="137.0" layoutY="38.0" prefHeight="50.0" prefWidth="308.0" promptText="Thành tích" style="-fx-border-color: black; -fx-background-color: #ffffff;" styleClass="search" stylesheets="@../../../static/css/main.css" />
+      <GridPane layoutX="16.0" layoutY="15.0" prefHeight="272.0" prefWidth="563.0">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="280.79998779296875" minWidth="10.0" prefWidth="123.199951171875" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="465.60003662109375" minWidth="10.0" prefWidth="452.800048828125" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         </rowConstraints>
+         <children>
+            <Label prefHeight="50.0" prefWidth="106.0" text="Thành tích:">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+            </Label>
+            <Label prefHeight="50.0" prefWidth="114.0" text="Mô tả gói quà:" wrapText="true" GridPane.rowIndex="1">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+            </Label>
+            <TextField fx:id="textMoTa" prefHeight="50.0" prefWidth="244.0" promptText="Mô tả" style="-fx-border-color: black;" styleClass="search" stylesheets="@../../../static/css/main.css" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Label prefHeight="50.0" prefWidth="114.0" text="Đơn giá:" wrapText="true" GridPane.rowIndex="2">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+            </Label>
+            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="20.0" GridPane.columnIndex="1">
+               <children>
+                  <TextField fx:id="textThanhTich" prefHeight="50.0" prefWidth="329.0" promptText="Thành tích" style="-fx-border-color: black;" styleClass="search" stylesheets="@../../../static/css/main.css" />
+                  <TextField fx:id="textNam" prefHeight="50.0" prefWidth="100.0" promptText="Năm" style="-fx-border-color: black;" styleClass="search" stylesheets="@../../../static/css/main.css" />
+               </children>
+            </HBox>
+            <HBox alignment="CENTER_LEFT" prefHeight="83.0" prefWidth="454.0" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <children>
+                  <TextField fx:id="textDonGia" prefHeight="50.0" prefWidth="146.0" promptText="Đơn giá" style="-fx-border-color: black;" styleClass="search" stylesheets="@../../../static/css/main.css" />
+                  <Label prefHeight="50.0" prefWidth="150.0" text="vnđ / 1 học sinh" wrapText="true">
+                     <font>
+                        <Font name="System Bold" size="15.0" />
+                     </font>
+                  </Label>
+               </children>
+            </HBox>
+         </children>
+      </GridPane>
    </children>
 </AnchorPane>
