--- a/src/views/phatqua/thieunhi/Dip.fxml
+++ b/src/views/phatqua/thieunhi/Dip.fxml
@@ -6,7 +6,7 @@
 
 <AnchorPane prefHeight="150.0" prefWidth="333.0" styleClass="login" stylesheets="@../../../static/css/main.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.thieunhi.ThemNamSuKienController">
    <children>
-      <TextField fx:id="themDipMoi" layoutX="8.0" layoutY="23.0" promptText="Điền dịp bạn muốn" styleClass="login" stylesheets="@../../../static/css/main.css" />
+      <TextField fx:id="themDipMoi" layoutX="8.0" layoutY="23.0" onKeyPressed="#themDip" promptText="Điền dịp bạn muốn" styleClass="login" stylesheets="@../../../static/css/main.css" />
       <Button layoutX="174.0" layoutY="92.0" mnemonicParsing="false" onAction="#close" prefHeight="41.0" prefWidth="88.0" styleClass="small_button" stylesheets="@../../../static/css/main.css" text="Hủy" />
       <Button layoutX="69.0" layoutY="91.0" mnemonicParsing="false" onAction="#themDipMoi" prefHeight="42.0" prefWidth="88.0" styleClass="small_button" stylesheets="@../../../static/css/main.css" text="OK" />
    </children>
