Revert "Chức năng phát quà học sinh"
This reverts commit ee2d3e8b8fc05ea2f4019d948001a6d3a563dc05.

--- a/src/views/phatqua/hocsinh/HocSinh.fxml
+++ b/src/views/phatqua/hocsinh/HocSinh.fxml
@@ -58,7 +58,7 @@
                   </Button>
                </children>
             </HBox>
-            <TableView fx:id="hocSinhTable" onMouseClicked="#handleRow" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
+            <TableView fx:id="hocSinhTable" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
               <columns>
                 <TableColumn fx:id="col_Ten" prefWidth="152.00000286102295" text="Họ và tên" />
                   <TableColumn fx:id="col_GioiTinh" prefWidth="64.79998779296875" text="Giới tính" />
