--- a/src/views/phatqua/hocsinh/ThemThanhTich.fxml
+++ b/src/views/phatqua/hocsinh/ThemThanhTich.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -43,7 +44,6 @@
                   <Font name="System Bold" size="15.0" />
                </font>
             </Label>
-            <TextField fx:id="textEnterThanhTich" prefHeight="50.0" prefWidth="447.0" promptText="Mô tả" style="-fx-border-color: black;" styleClass="search" stylesheets="@../../../static/css/main.css" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <Label prefHeight="50.0" prefWidth="114.0" text="Trường:" wrapText="true" GridPane.rowIndex="2">
                <font>
                   <Font name="System Bold" size="15.0" />
@@ -59,6 +59,7 @@
                   <TextField fx:id="textEnterTruong" prefHeight="50.0" prefWidth="458.0" promptText="Trường" style="-fx-border-color: black;" styleClass="search" stylesheets="@../../../static/css/main.css" />
                </children>
             </HBox>
+            <ComboBox fx:id="comboBoxThanhTich" onAction="#themThanhTich" prefHeight="50.0" prefWidth="331.0" promptText="Thành tích" styleClass="search" stylesheets="@../../../static/css/main.css" GridPane.columnIndex="1" GridPane.rowIndex="1" />
          </children>
       </GridPane>
    </children>
