--- a/src/views/phatqua/thieunhi/Dip.fxml
+++ b/src/views/phatqua/thieunhi/Dip.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="150.0" prefWidth="333.0" styleClass="login" stylesheets="@../../../static/css/main.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ThemLuaChonController">
+<AnchorPane prefHeight="150.0" prefWidth="333.0" styleClass="login" stylesheets="@../../../static/css/main.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.thieunhi.ThemNamDipController">
    <children>
       <TextField fx:id="themDipMoi" layoutX="8.0" layoutY="23.0" onKeyPressed="#themDip" promptText="Điền dịp bạn muốn" styleClass="login" stylesheets="@../../../static/css/main.css" />
       <Button layoutX="174.0" layoutY="92.0" mnemonicParsing="false" onAction="#close" prefHeight="41.0" prefWidth="88.0" styleClass="small_button" stylesheets="@../../../static/css/main.css" text="Hủy" />
